// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "dark" theme 1`] = `
<span
  className="HelloMessageStyled__Container-sc-1krgbl9-0 GViYa"
>
  Hello 
</span>
`;

exports[`renders "light" theme 1`] = `
<span
  className="HelloMessageStyled__Container-sc-1krgbl9-0 deYTYb"
>
  Hello 
</span>
`;
